# TODO-LIST-App_python

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/scripts/: validate_yaml.py
.github/workflows/: ci.yml  label.yml  security-scan.yml
.tmp/: black.out  flake8.out  pytest.out
tests/: test_healthcheck.py  test_smoke.py
