[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = "Application TODO list avec interface graphique (Tkinter)"
authors = ["Thurxm09 <othuram23@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"
isort = "^5.12"
flake8 = "^6.0"
safety = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
